# TradeSymphony-V0

./: .gitignore  Dockerfile  README.md  investment_recommendations.md  old_run.json  portfolio.json  pyproject.toml
docs/: Agentic-Flow-Diagram Compressed.mmd  Agentic-Flow-Diagram.mmd  System-Design.tex
memory/: chroma.sqlite3  long_term_memory_storage.db
reports/: compliance_review.md  esg_analysis.md  fundamental_research.md  investment_committee_decision.md  investment_recommendations.md  investment_strategy.md  macro_outlook.md  portfolio_analysis.md  quantitative_screening.md  risk_assessment.md
src/tradesymphony/: api.py  crew.py  main.py  models.py
src/tradesymphony/config/: agents.yaml  tasks.yaml
src/tradesymphony/data/: fallback_portfolio.json
src/tradesymphony/tools/: __init__.py  alpha_vantage_tool.py  browser_based_research_tool.py  company_research_tool.py  compliance_check_tool.py  default_tools.py  financial_analysis_tool.py  financial_data_tool.py  firecrawl_research_tool.py  macro_economic_analysis_tool.py  market_simulation_tool.py  portfolio_optimization_tool.py  risk_assessment_tool.py  rlama_financial_analysis_tool.py  sentiment_analysis_tool.py  stock_screener_tool.py  stock_symbol_fetcher_tool.py  tavily_search_tool.py  technical_analysis_tool.py  yahoo_finance_tool.py
src/tradesymphony/utils/: __init__.py  api_fetch.py  logger.py  telemetry_tracking.py
